--- a/public/css/template.css
+++ b/public/css/template.css
@@ -1,101 +1,1 @@
-body {
-    width: 100vw;
-    height: 100vh;
-
-    display: grid;
-    grid-template-columns: 300px 8fr;
-    grid-template-rows: 1fr;
-}
-
-nav {
-    background-color: #52A852;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-    padding: 100px 0 0;
-}
-
-nav li {
-    width: 100%;
-    margin-bottom: 4px;
-}
-
-nav a {
-    display: grid;
-    grid-template-columns: 30px auto;
-
-    padding: 12px 16px;
-    text-decoration: none;
-    font-size: 16px;
-    transition: background-color 300ms;
-
-    color: white;
-}
-
-nav a:hover {
-    background-color: #000;
-    color: #A9A03F;
-}
-
-.nav-aktif {
-    background-color: #000;
-    color: #A9A03F;
-}
-
-/* 
-TODO: Header
-*/
-header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #52A852;
-    padding: 20px 40px;
-}
-
-.username {
-    text-transform: capitalize;
-}
-
-.user {
-    display: flex;
-    column-gap: 8px;
-    align-items: center;
-}
-
-.user>svg {
-    width: 30px;
-    height: 30px;
-    color: #fff;
-}
-
-.user span {
-    color: #fff;
-    font-weight: 500;
-}
-
-.user span:hover {
-    cursor: default;
-}
-
-.logout svg {
-    width: 20px;
-    height: 20px;
-    color: #eee;
-
-    transition: color 300ms;
-}
-
-.logout svg:hover {
-    cursor: pointer;
-    color: #000;
-}
-
-/* 
-TODO: Content
-*/
-.content>div {
-    padding: 20px;
-    box-sizing: border-box;
-}
+body{width:100vw;height:100vh;display:grid;grid-template-columns:300px 8fr;grid-template-rows:1fr}nav{background-color:#52a852}nav ul{list-style:none;padding:0;padding:100px 0 0}nav li{width:100%;margin-bottom:4px}nav a{display:grid;grid-template-columns:30px auto;padding:12px 16px;text-decoration:none;font-size:16px;transition:background-color 300ms;color:#fff}nav a:hover{background-color:#000;color:#a9a03f}.nav-aktif{background-color:#fff;color:#52a852}header{display:flex;justify-content:space-between;background-color:#52a852;padding:20px 40px}.username{text-transform:capitalize}.user{display:flex;column-gap:8px;align-items:center}.user>svg{width:30px;height:30px;color:#fff}.user span{color:#fff;font-weight:500}.user span:hover{cursor:default}.logout svg{width:20px;height:20px;color:#eee;transition:color 300ms}.logout svg:hover{cursor:pointer;color:#000}.content>div{padding:20px;box-sizing:border-box}
