--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,25 +1,1 @@
-.form {
-    background-color: rgba(179, 242, 240, .5);
-    height: 100vh;
-
-    position: relative;
-}
-
-.form>div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
-
-    background-color: #fff;
-    padding: 10px 20px;
-    border-radius: 10px;
-}
-
-.form>div>h1{
-    text-align: center;
-    line-height: 5rem;
-    font-size: 25px;
-    font-weight: bold;
-}
+body{width:100vw;height:100vh;overflow:hidden}.form{background-color:rgba(179,242,240,.5);height:100vh;position:relative}.form>div{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);background-color:#fff;padding:10px 20px;border-radius:10px}.form>div>h1{text-align:center;line-height:5rem;font-size:25px;font-weight:bold}
