--- a/public/sass/templates/template.sass
+++ b/public/sass/templates/template.sass
@@ -1,6 +1,9 @@
 body
-    width: 100vw
-    height: 100vh
+    max-width: 100vw
+    max-height: 100vh
+    overflow: hidden
+
+    margin: auto
 
     display: grid
     grid-template-columns: 300px 8fr
@@ -29,11 +32,7 @@ nav a
 
     color: white
 
-nav a:hover
-    background-color: #000
-    color: #A9A03F
-
-.nav-aktif
+nav a:hover, .nav-aktif
     background-color: #fff
     color: #52A852
 
@@ -43,6 +42,7 @@ header
     justify-content: space-between
     background-color: #52A852
     padding: 20px 40px
+    height: 80px
 
 .username
     text-transform: capitalize
