--- a/public/sass/templates/template.sass
+++ b/public/sass/templates/template.sass
@@ -11,9 +11,9 @@ body
 
 nav
     background-color: #52A852
+    height: 100vh
 
 nav ul
-    list-style: none
     padding: 0
     padding: 100px 0 0
 
@@ -79,3 +79,5 @@ header
 .content>div
     padding: 20px
     box-sizing: border-box
+    max-height: calc( 100vh - 80px )
+    overflow: auto
