--- a/public/sass/utils/manajemen.sass
+++ b/public/sass/utils/manajemen.sass
@@ -3,7 +3,7 @@
 
     h1
         font-size: 1.5rem
-        background-color: #F48EC3
+        background-color: #FAAE7B
         color: #fff
         width: fit-content
         padding: 8px 16px
@@ -35,3 +35,24 @@
 
         &:hover
             background-color: #eee
+
+// TODO: footer
+.footer
+    .previous-next
+        display: flex
+        width: 240px
+
+        button, label
+            border-radius: 4px
+            padding: 4px 12px
+            box-sizing: border-box
+            background-color: #eaeaea
+            color: #fff
+
+        button
+            background-color: #07C8F9
+            border: none
+            flex: 2.5
+
+        label
+            flex: 1
