--- a/public/css/pages/dashboard.css
+++ b/public/css/pages/dashboard.css
@@ -1,1 +1,1 @@
-.container{width:75%}@media screen and (max-width: 768px){.container{width:100%}}
+.card-footer,.card-header{background-color:#f086a3;color:#fff;border:1px solid #f086a3}.card-footer a{color:#fff}.container{width:75%}@media screen and (max-width: 768px){.container{width:100%}}
