--- a/public/sass/components/_management.sass
+++ b/public/sass/components/_management.sass
@@ -2,14 +2,13 @@
 .title
 
     h1
-        font-size: 1.5rem
-        background-color: #FAAE7B
-        color: #fff
+        font-size: 2rem
+        border-bottom: 7px solid #F086A3
         width: fit-content
         padding: 8px 16px
-        border-radius: 4px
+        border-radius: 12px
 
-        margin: auto
+        margin: 0 auto 2rem
 
 // TODO: Action
 .action
